web getting builed

--- a/index.html
+++ b/index.html
@@ -4,9 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Html_class</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <!--our headings-->
+    <h1>Heading1</h1>
+    <h2>Heading2</h2>
+    <h3>Heading3</h3>
+    <h4>Heading4</h4>
+    <h5>heading5</h5>
+    <h6>Heading6</h6>
+    <!--our paragraphs-->
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In quae repellendus culpa? <hr> Earum quod vel labore reiciendis perspiciatis sit fugit. Obcaecati, a vero voluptates ut quod consectetur dignissimos dolor eum?
+
+    </p>
+    <!--anchor taga-->
+    <a href="http://www.google.com" target="_blank">clickme</a>
+    <!--ul and ol-->
+    <ul>
+<h1>SUN TIME UGANDA LIMITED</h1>
+<li>Okello Andrew</li>
+<li>Karukundo Doreen</li>
+<li>Jane Beckey</li>
+<li>Omorowange Isaac</li>
+
+    </ul>
+
+    <ol>
+        <h1>SUN TIME UGANDA LIMITED</h1>
+<li>Okello Andrew</li>
+<li>Karukundo Doreen</li>
+<li>Jane Beckey</li>
+<li>Omorowange Isaac</li>
+    </ol>
+    <button>clickme</button>
+    <div style="padding: 200px"></div>
+    <img src="sun time solar logo_1.png" alt="image of a company logo">
 </body>
 </html>
